@@ -27,6 +27,7 @@ dpkg (1.17.14) UNRELEASED; urgency=low
   * Fix the build system to parse the system curses.h header instead of
     dselect-curses.h, to not just default on the builtin and override keys
     for dselect key bindings support. Regression introduced in dpkg 1.15.1.
+  * Emit a warning when using the obsolete Dpkg::Deps check_package() function.
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
